# Todo_App

./: .gitignore  404.html  CNAME  index.html
.github/workflows/: API_Deploy_Prod.yml  DotNet_API_Deploy_Prod.yml  Node_API_Deploy_Prod.yml  RoR_API_Deploy_Prod.yml  Rust_API_Deploy_Prod.yml  WEB_Deploy_Prod.yml
apis/dotnet_todo_api/: dotnet_todo_api.sln
apis/node_todo_api/: Dockerfile  package-lock.json  server.ts
apis/node_todo_api/__test__/: todo.test.ts  (+1 more)
apis/rails_todo_api/: Dockerfile.rails  Gemfile
apis/rust_todo_api/: Cargo.toml  Dockerfile
apis/rust_todo_api/src/: main.rs
apis/rust_todo_api/src/handlers/: todo_handler.rs  user_handler.rs
apis/rust_todo_api/src/middleware/: auth_header_verify_middleware.rs  auth_middleware.rs  todo_id_verify_middleware.rs
apis/rust_todo_api/src/services/: todo_service.rs
assets/: index-08d8d818.js  index-27c3fc1d.js  index-3cdbbff8.js  index-65ba07c6.js  index-67a04707.js  index-85b22815.js  index-ad7e9037.js  index-ce02a06c.js  index-d6c68f44.js  index-ed4e155e.js  index-f7e690d5.js  index-ffa97332.css
node_todo_api/: .production.env  .test.env  package-lock.json  package.json  readme.md
node_todo_api/__test__/: todo.test.ts  user.test.ts
rails_todo_api/: Dockerfile.rails  Gemfile  README.md
rails_todo_api/config/: application.rb  credentials.yml.enc  puma.rb  routes.rb
react-todo-frontend/: package-lock.json  package.json
react_todo_frontend/: CNAME  index.html  package-lock.json  package.json
react_todo_frontend/src/: App.tsx  custom.css  index.css
resources/: create_test_database.sql
resources/sample_data/: resample_users.sql
rust_todo_api/: Cargo.toml  Dockerfile
rust_todo_api/src/: main.rs
rust_todo_api/src/handlers/: auth_handler.rs  todo_handler.rs  user_handler.rs
rust_todo_api/src/middleware/: auth_middleware.rs
rust_todo_api/src/services/: auth_service.rs  session_service.rs  todo_service.rs  user_service.rs
rust_todo_api/src/structs/: auth_request.rs  mod.rs  session_model.rs  signout_request.rs  todo_model.rs  user_model.rs
rust_todo_api/src/utils/: hash_utils.rs
(+117 files in other folders)
