[package]
name = "rust_todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web           = "*"
serde_json          = "*"
dotenv              = "*"
bcrypt              = "*"
actix-web-validator = "*"
sha2                = "*"
base64              = "*"
hex                 = "*"
chrono              = "*"
regex               = "*"
futures             = "*"
futures-util        = "*"
actix-service       = "*"
uuid                = { version = "*", features = ["v4"] }
serde               = { version = "*", features = ["derive"] }
sqlx                = { version = "*", features = ["runtime-async-std", "macros", "mysql"] }
validator           = { version = "*", features = ["derive"] }